[AV2-313] fixed issue showing a scrollbar in lock assessment popup. fixed height issue in lock assessment popup. fixed margin, font size issue in lock assessment popup. create new method to check assessment status and added new parameters. call new method in html with new params. added mised image to task interface. enanable auto save and save button in team assessment. added default image if no image got from backend. remove popup syaing `changes will not save` when click back arrow. update notification service to biend event to modal. removed model.present() from modal method. showing lock icon in activity page when some one locked assessment.

--- a/src/app/shared/notification/lock-team-assessment-pop-up/lock-team-assessment-pop-up.component.scss
+++ b/src/app/shared/notification/lock-team-assessment-pop-up/lock-team-assessment-pop-up.component.scss
@@ -7,6 +7,7 @@
   .imgage-content {
     text-align: -webkit-center;
     margin-top: 20px;
+    margin-bottom: 20px;
 
     .image {
       background-color: #ffffff !important;
@@ -27,11 +28,11 @@
   }
 
   .div-after-img {
-    margin: 0 15px 15px;
+    margin: 0 15px 0;
 
     .description {
       text-align: -webkit-center;
-      font-weight: bold;
+      font-weight: 600;
       color: var(--ion-color-medium);
       font-size: 12px;
       line-height: 17px;
