--- a/src/styles.scss
+++ b/src/styles.scss
@@ -161,11 +161,16 @@ body {
 
 .lock-assessment-popup {
   .modal-wrapper {
-    --height: 37%;
+    --height: 40%;
     --width: 70%;
     --background: transparent;
     --box-shadow: none;
     --border-radius: 12px;
+    max-height: 266px;
+    min-height: 266px;
+    .inner-scroll, .scroll-y, .overscroll {
+      --overflow: hidden;
+    }
   }
 }
 
